--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -16,6 +16,7 @@
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 2000; }
     .filters { margin-bottom: 20px; width: 99%; margin-left: auto; margin-right: auto; }
     .action-buttons { display: flex; justify-content: center; align-items: center; gap: 5px; height: 100%; }
+    .notes-btn { display: block; width: 100%; }
   </style>
 </head>
 <body>
@@ -138,6 +139,15 @@
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
       </div>
     </div>
+    <div id="toastConfirm" class="toast align-items-center text-bg-warning border-0 mb-2" role="alert">
+      <div class="d-flex">
+        <div class="toast-body" id="toastConfirmMsg">⚠️ هل أنت متأكد؟</div>
+        <div class="me-2 m-auto">
+          <button type="button" class="btn btn-sm btn-danger" id="confirmYes">نعم</button>
+          <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="toast">إلغاء</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- مكتبات -->
@@ -148,6 +158,9 @@
     const quillEdit = new Quill('#editEditor', { theme: 'snow' });
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError = new bootstrap.Toast(document.getElementById('toastError'));
+    const toastConfirmEl = document.getElementById('toastConfirm');
+    const toastConfirm = new bootstrap.Toast(toastConfirmEl);
+    let confirmCallback = null;
 
     function showSuccess(msg="✅ العملية نجحت") {
       document.querySelector("#toastSuccess .toast-body").innerText = msg;
@@ -157,6 +170,15 @@
       document.querySelector("#toastError .toast-body").innerText = msg;
       toastError.show();
     }
+    function showConfirm(msg, callback) {
+      document.getElementById("toastConfirmMsg").innerText = msg;
+      confirmCallback = callback;
+      toastConfirm.show();
+    }
+    document.getElementById("confirmYes").addEventListener("click", () => {
+      toastConfirm.hide();
+      if (confirmCallback) confirmCallback();
+    });
 
     // تحميل خيارات الكليات والمدققين
     async function loadOptions() {
@@ -262,11 +284,13 @@
             <td contenteditable="true" data-field="report3">${c.report3 ?? 0}</td>
             <td contenteditable="true" data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
             <td class="availability-cell">${c.availability_score ?? 0}</td>
-            <td>${c.notes && c.notes.trim() !== "" ? `<button class="btn btn-sm btn-info" onclick="showNotes(\`${c.notes}\`)">🔍 عرض</button>` : ''}</td>
+            <td>${c.notes && c.notes.trim() !== "" 
+                ? `<button class="btn btn-sm btn-info notes-btn" onclick="showNotes(\`${c.notes}\`)">🔍 عرض</button>` 
+                : '<span class="text-muted">لا توجد ملاحظات</span>'}</td>
             <td class="action-buttons">
               <button class="btn btn-sm btn-success" onclick="saveRow(this, '${c._id}')">💾</button>
               <button class="btn btn-sm btn-primary" onclick='editCommittee(${JSON.stringify(c)})'>✏️</button>
-              <button class="btn btn-sm btn-danger" onclick="deleteCommittee('${c._id}')">🗑️</button>
+              <button class="btn btn-sm btn-danger" onclick="confirmDelete('${c._id}')">🗑️</button>
             </td>
           `;
           tbody.appendChild(tr);
@@ -329,13 +353,14 @@
     }
 
     // حذف
-    async function deleteCommittee(id) {
-      if (!confirm("⚠️ هل أنت متأكد من الحذف؟")) return;
-      try {
-        await axios.delete(`/api/committees/${id}`);
-        showSuccess("🗑️ تم حذف السجل بنجاح");
-        loadCommittees();
-      } catch (err) { console.error(err); showError("❌ فشل الحذف"); }
+    function confirmDelete(id) {
+      showConfirm("⚠️ هل أنت متأكد من الحذف؟", async () => {
+        try {
+          await axios.delete(`/api/committees/${id}`);
+          showSuccess("🗑️ تم حذف السجل بنجاح");
+          loadCommittees();
+        } catch (err) { console.error(err); showError("❌ فشل الحذف"); }
+      });
     }
   </script>
 </body>
