--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -10,6 +10,15 @@
     table { background: #fff; border-radius: 10px; overflow: hidden; font-size: 14px; }
     th { background-color: #0d6efd; color: #fff; text-align: center; }
     td { text-align: center; vertical-align: middle; }
+        /* تحديد عرض عمود الملاحظات (العمود 17) */
+    #evaluationsTableWrapper th:nth-child(17),
+    #evaluationsTableWrapper td:nth-child(17) {
+      width: 250px;
+      max-width: 250px;
+      white-space: normal;
+      word-wrap: break-word;
+    }
+
     .filters { margin-bottom: 20px; }
     #completionRateContainer {
       text-align: center;
