--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -102,21 +102,23 @@
       </div>
     </div>
 
-   <!-- خيارات الإخفاء -->
-<div class="d-flex justify-content-center align-items-center gap-3 mb-3">
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" id="hideAuditorCheckbox">
-    <label class="form-check-label ms-2" for="hideAuditorCheckbox">إخفاء اسم المدقق</label>
-  </div>
-  <span>|</span>
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" id="hideDateCheckbox">
-    <label class="form-check-label ms-2" for="hideDateCheckbox">إخفاء تاريخ التدقيق</label>
-  </div>
-  <span>|</span>
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" id="hideCollegeCheckbox">
-    <label class="form-check-label ms-2" for="hideCollegeCheckbox">إخفاء الكلية</label>
+  <!-- خيارات الإخفاء داخل كارد -->
+<div class="card mb-3">
+  <div class="card-body d-flex justify-content-center align-items-center gap-3">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="hideAuditorCheckbox">
+      <label class="form-check-label ms-2" for="hideAuditorCheckbox">إخفاء اسم المدقق</label>
+    </div>
+    <span>|</span>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="hideDateCheckbox">
+      <label class="form-check-label ms-2" for="hideDateCheckbox">إخفاء تاريخ التدقيق</label>
+    </div>
+    <span>|</span>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="hideCollegeCheckbox">
+      <label class="form-check-label ms-2" for="hideCollegeCheckbox">إخفاء الكلية</label>
+    </div>
   </div>
 </div>
 
