--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -93,12 +93,13 @@
 
     #printHeader { display: none; }
 
-    /* زر الطباعة أعلى اليسار */
-    .print-btn {
-      position: absolute;
-      top: 10px;
-      left: 15px;
-    }
+   /* زر الطباعة أعلى اليسار (مع RTL) */
+.print-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px; /* ✅ استبدال left بـ right */
+}
+
 
     /* ✅ في الشاشة: أخفي نص الملاحظات وأظهر الزر */
 .screen-notes { display: inline; }
