--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -98,7 +98,8 @@
 .print-btn {
   position: absolute;
   top: 10px;
-  left: 15px; /* ✅ استبدال left بـ right */
+  left: 15px;
+  direction: ltr; /* ✅ يجبر المتصفح على اعتبار موضع الزر من اليسار */
 }
 
 
