--- a/public/test.html
+++ b/public/test.html
@@ -29,56 +29,72 @@
       color: #0d6efd;
     }
 
-    /* ✅ تنسيقات الطباعة */
+    /* ✅ الطباعة */
     @media print {
-      @page { size: landscape; margin: 15mm; }
-      body { font-size: 12px; }
-
-      /* إخفاء كل شيء عدا الهيدر والجدول */
+      @page { 
+        size: landscape; 
+        margin: 20mm; /* ✅ هامش متساوي من كل الجهات */
+      }
       body * { visibility: hidden; }
       #printHeader, #printHeader * ,
       #evaluationsTableWrapper, #evaluationsTableWrapper * {
         visibility: visible;
       }
-
       #printHeader {
         display: block !important;
         text-align: center;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
         position: relative;
-        top: 0;
-        left: 0;
         width: 100%;
-        font-size: 16px;
       }
-
       #evaluationsTableWrapper {
-        position: relative;
+        position: relative;   /* ✅ تعديل */
+        margin: auto;         /* ✅ تمركز الجدول */
         width: 100%;
       }
 
-      /* منع تقطيع الصفوف */
-      #evaluationsTableWrapper tr { page-break-inside: avoid; }
-
-      /* الملاحظات */
-      #evaluationsTableWrapper td.notes-col { font-size: 11px; }
-      #evaluationsTableWrapper td.notes-col.long-notes { font-size: 9px; }
-
-      /* إخفاء العناصر غير المطلوبة */
-      .filters, .card, .print-btn, .toast-container { display: none !important; }
-
-      /* ✅ الملاحظات: عرض النص فقط */
-      .screen-notes { display: none !important; }
-      .print-notes { display: inline !important; white-space: pre-wrap; }
+      /* ✅ منع تقسيم الصفوف */
+      #evaluationsTableWrapper tr {
+        page-break-inside: avoid;
+      }
+      /* ✅ منع تقسيم عمود الملاحظات */
+      #evaluationsTableWrapper td.notes-col {
+        page-break-inside: avoid;
+      }
+      /* ✅ تصغير خط الملاحظات إذا طويلة */
+      #evaluationsTableWrapper td.notes-col {
+        font-size: 12px;
+      }
+      #evaluationsTableWrapper td.notes-col.long-notes {
+        font-size: 9px;
+      }
     }
+
+    /* ✅ إخفاء أعمدة */
+    #evaluationsTableWrapper.hide-auditor th.auditor-col,
+    #evaluationsTableWrapper.hide-auditor td.auditor-col { display: none; }
+
+    #evaluationsTableWrapper.hide-date th.date-col,
+    #evaluationsTableWrapper.hide-date td.date-col { display: none; }
+
+    #evaluationsTableWrapper.hide-college th.college-col,
+    #evaluationsTableWrapper.hide-college td.college-col { display: none; }
 
     #printHeader { display: none; }
 
-    /* زر الطباعة */
+    /* ✅ زر الطباعة أعلى اليسار */
     .print-btn {
       position: absolute;
       top: 10px;
       left: 15px;
+    }
+
+    /* ✅ الملاحظات: في الشاشة زر – في الطباعة نص */
+    .screen-notes { display: inline; }
+    .print-notes { display: none; }
+    @media print {
+      .screen-notes { display: none !important; }
+      .print-notes { display: inline !important; }
     }
   </style>
 </head>
@@ -181,126 +197,127 @@
     let lastCommitteesCount = 0;
 
     async function loadFilters() {
-      const colleges = await axios.get('/api/colleges');
-      const collegeSelect = document.getElementById('collegeFilter');
-      colleges.data.forEach(c => {
-        const opt = document.createElement('option');
-        opt.value = c.name;
-        opt.textContent = c.name;
-        collegeSelect.appendChild(opt);
-      });
+      try {
+        const colleges = await axios.get('/api/colleges');
+        const collegeSelect = document.getElementById('collegeFilter');
+        colleges.data.forEach(c => {
+          const opt = document.createElement('option');
+          opt.value = c.name;
+          opt.textContent = c.name;
+          collegeSelect.appendChild(opt);
+        });
 
-      const auditors = await axios.get('/api/auditors');
-      const auditorSelect = document.getElementById('auditorFilter');
-      auditors.data.forEach(a => {
-        const opt = document.createElement('option');
-        opt.value = a.name;
-        opt.textContent = a.name;
-        auditorSelect.appendChild(opt);
-      });
+        const auditors = await axios.get('/api/auditors');
+        const auditorSelect = document.getElementById('auditorFilter');
+        auditors.data.forEach(a => {
+          const opt = document.createElement('option');
+          opt.value = a.name;
+          opt.textContent = a.name;
+          auditorSelect.appendChild(opt);
+        });
+      } catch (err) {
+        console.error("خطأ في جلب الفلاتر:", err);
+      }
     }
 
     async function loadEvaluations() {
-      const college = document.getElementById('collegeFilter').value;
-      const auditor = document.getElementById('auditorFilter').value;
-      lastCollegeName = college || "جميع الكليات";
+      try {
+        const college = document.getElementById('collegeFilter').value;
+        const auditor = document.getElementById('auditorFilter').value;
+        lastCollegeName = college || "جميع الكليات";
 
-      let url = '/api/committees';
-      const params = [];
-      if (college) params.push(`college=${encodeURIComponent(college)}`);
-      if (auditor) params.push(`auditor_name=${encodeURIComponent(auditor)}`);
-      if (params.length > 0) url += '?' + params.join('&');
+        let url = '/api/committees';
+        const params = [];
+        if (college) params.push(`college=${encodeURIComponent(college)}`);
+        if (auditor) params.push(`auditor_name=${encodeURIComponent(auditor)}`);
+        if (params.length > 0) url += '?' + params.join('&');
 
-      const res = await axios.get(url);
-      const tbody = document.getElementById('evaluationsTable');
-      tbody.innerHTML = "";
+        const res = await axios.get(url);
+        const tbody = document.getElementById('evaluationsTable');
+        tbody.innerHTML = "";
 
-      if (res.data.length === 0) {
-        tbody.innerHTML = `<tr><td colspan="17" class="text-center">لا توجد تقييمات</td></tr>`;
-        document.getElementById("completionRateContainer").innerHTML = "";
-        lastCompletionRate = null;
-        lastCommitteesCount = 0;
-        return;
-      }
-
-      let totalAvailability = 0;
-      res.data.forEach((ev, index) => {
-        totalAvailability += ev.availability_score ?? 0;
-
-        function stripHTML(html) {
-          let div = document.createElement("div");
-          div.innerHTML = html;
-          return div.innerText.trim();
+        if (res.data.length === 0) {
+          tbody.innerHTML = `<tr><td colspan="17" class="text-center">لا توجد تقييمات</td></tr>`;
+          document.getElementById("completionRateContainer").innerHTML = "";
+          lastCompletionRate = null;
+          lastCommitteesCount = 0;
+          return;
         }
 
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${index + 1}</td>
-          <td class="college-col">${ev.college || '-'}</td>
-          <td>${ev.committee_name || '-'}</td>
-          <td class="auditor-col">${ev.auditor_name || '-'}</td>
-          <td class="date-col">${ev.audit_date ? new Date(ev.audit_date).toLocaleDateString('ar-EG') : '-'}</td>
-          <td>${ev.formation_decision ?? 0}</td>
-          <td>${ev.work_plan ?? 0}</td>
-          <td>${ev.performance_indicators ?? 0}</td>
-          <td>${ev.meetings ?? 0}</td>
-          <td>${ev.consistency ?? 0}</td>
-          <td>${ev.coverage_books ?? 0}</td>
-          <td>${ev.report1 ?? 0}</td>
-          <td>${ev.report2 ?? 0}</td>
-          <td>${ev.report3 ?? 0}</td>
-          <td>${ev.statistical_analysis ?? 0}</td>
-          <td>${ev.availability_score ?? 0}</td>
-          <td class="notes-col ${ev.notes && ev.notes.length > 800 ? 'long-notes' : ''}">
-            <span class="screen-notes">
-              ${
-                ev.notes && ev.notes.trim() !== "" && ev.notes.trim() !== "<p><br></p>"
-                  ? `<button class="btn btn-sm btn-info" onclick="showNotes(\`${ev.notes}\`)">🔍 عرض</button>`
-                  : '<span class="text-muted">لا توجد ملاحظات</span>'
-              }
-            </span>
-            <span class="print-notes d-none">
-              ${
-                ev.notes && ev.notes.trim() !== "" && ev.notes.trim() !== "<p><br></p>"
-                  ? stripHTML(ev.notes)
-                  : 'لا توجد ملاحظات'
-              }
-            </span>
-          </td>
-        `;
-        tbody.appendChild(tr);
-      });
+        res.data.sort((a, b) => (a.college || "").localeCompare(b.college || "", "ar"));
 
-      const numCommittees = res.data.length;
-      lastCommitteesCount = numCommittees;
-      const denominator = numCommittees * 9;
-      const completionRate = ((totalAvailability / denominator) * 100).toFixed(2);
+        let totalAvailability = 0;
+        res.data.forEach((ev, index) => {
+          totalAvailability += ev.availability_score ?? 0;
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${index + 1}</td>
+            <td class="college-col">${ev.college || '-'}</td>
+            <td>${ev.committee_name || '-'}</td>
+            <td class="auditor-col">${ev.auditor_name || '-'}</td>
+            <td class="date-col">${ev.audit_date ? new Date(ev.audit_date).toLocaleDateString('ar-EG') : '-'}</td>
+            <td>${ev.formation_decision ?? 0}</td>
+            <td>${ev.work_plan ?? 0}</td>
+            <td>${ev.performance_indicators ?? 0}</td>
+            <td>${ev.meetings ?? 0}</td>
+            <td>${ev.consistency ?? 0}</td>
+            <td>${ev.coverage_books ?? 0}</td>
+            <td>${ev.report1 ?? 0}</td>
+            <td>${ev.report2 ?? 0}</td>
+            <td>${ev.report3 ?? 0}</td>
+            <td>${ev.statistical_analysis ?? 0}</td>
+            <td>${ev.availability_score ?? 0}</td>
+            <td class="notes-col ${ev.notes && ev.notes.length > 800 ? 'long-notes' : ''}">
+              <span class="screen-notes">
+                ${
+                  ev.notes && ev.notes.trim() !== "" && ev.notes.trim() !== "<p><br></p>"
+                    ? `<button class="btn btn-sm btn-info" onclick="showNotes(\`${ev.notes}\`)">🔍 عرض</button>`
+                    : '<span class="text-muted">لا توجد ملاحظات</span>'
+                }
+              </span>
+              <span class="print-notes d-none">
+                ${
+                  ev.notes && ev.notes.trim() !== "" && ev.notes.trim() !== "<p><br></p>"
+                    ? ev.notes
+                    : 'لا توجد ملاحظات'
+                }
+              </span>
+            </td>
+          `;
+          tbody.appendChild(tr);
+        });
 
-      if (college) {
-        document.getElementById("completionRateContainer").innerHTML =
-          `📌 نسبة الاكتمال لكلية ${college} = ${completionRate}%<br>
-           📋 عدد لجان كلية ${college} = ${numCommittees}`;
-      } else {
-        document.getElementById("completionRateContainer").innerHTML =
-          `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
-           📋 عدد لجان جميع الكليات = ${numCommittees}`;
+        const completionDiv = document.getElementById("completionRateContainer");
+        const numCommittees = res.data.length;
+        lastCommitteesCount = numCommittees;
+        const denominator = numCommittees * 9;
+        const completionRate = ((totalAvailability / denominator) * 100).toFixed(2);
+
+        if (college) {
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لكلية ${college} = ${completionRate}%<br>
+                                     📋 عدد لجان كلية ${college} = ${numCommittees}`;
+        } else {
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
+                                     📋 عدد لجان جميع الكليات = ${numCommittees}`;
+        }
+
+        lastCompletionRate = completionRate;
+
+      } catch (err) {
+        console.error("خطأ في جلب التقييمات:", err);
       }
-
-      lastCompletionRate = completionRate;
     }
 
     function printTable() {
       const headerDiv = document.getElementById("printHeader");
       if (lastCollegeName === "جميع الكليات") {
-        headerDiv.innerHTML =
-          `<h4>📊 نتائج تقييم اللجان - جميع الكليات</h4>` +
-          (lastCompletionRate ? `<p>📌 نسبة الاكتمال لجميع الكليات = ${lastCompletionRate}%</p>` : "") +
-          `<p>📋 عدد لجان جميع الكليات = ${lastCommitteesCount}</p>`;
+        headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - جميع الكليات</h4>` +
+                              (lastCompletionRate ? `<p>📌 نسبة الاكتمال لجميع الكليات = ${lastCompletionRate}%</p>` : "") +
+                              `<p>📋 عدد لجان جميع الكليات = ${lastCommitteesCount}</p>`;
       } else {
-        headerDiv.innerHTML =
-          `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
-          (lastCompletionRate ? `<p>📌 نسبة الاكتمال لكلية ${lastCollegeName} = ${lastCompletionRate}%</p>` : "") +
-          `<p>📋 عدد لجان كلية ${lastCollegeName} = ${lastCommitteesCount}</p>`;
+        headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
+                              (lastCompletionRate ? `<p>📌 نسبة الاكتمال لكلية ${lastCollegeName} = ${lastCompletionRate}%</p>` : "") +
+                              `<p>📋 عدد لجان كلية ${lastCollegeName} = ${lastCommitteesCount}</p>`;
       }
       window.print();
       headerDiv.innerHTML = "";
