--- a/public/test.html
+++ b/public/test.html
@@ -44,11 +44,11 @@
         display: block !important;
         text-align: center;
         margin-bottom: 20px;
-        position: relative;
+        position: relative; /* ✅ التدفق الطبيعي */
         width: 100%;
       }
       #evaluationsTableWrapper {
-        position: relative;   /* ✅ تعديل */
+        position: relative;   /* ✅ التدفق الطبيعي */
         margin: auto;         /* ✅ تمركز الجدول */
         width: 100%;
       }
