--- a/public/test.html
+++ b/public/test.html
@@ -31,10 +31,7 @@
 
     /* ✅ الطباعة */
     @media print {
-      @page { 
-        size: landscape; 
-        margin: 20mm; /* ✅ هامش متساوي من كل الجهات */
-      }
+      @page { size: landscape; } /* ✅ إجبار الطباعة أفقياً */
       body * { visibility: hidden; }
       #printHeader, #printHeader * ,
       #evaluationsTableWrapper, #evaluationsTableWrapper * {
@@ -44,12 +41,15 @@
         display: block !important;
         text-align: center;
         margin-bottom: 20px;
-        position: relative; /* ✅ التدفق الطبيعي */
+        position: absolute;
+        top: 20px;
+        left: 0;
         width: 100%;
       }
       #evaluationsTableWrapper {
-        position: relative;   /* ✅ التدفق الطبيعي */
-        margin: auto;         /* ✅ تمركز الجدول */
+        position: absolute;
+        left: 0; 
+        top: 150px;
         width: 100%;
       }
 
@@ -187,11 +187,39 @@
     </table>
   </div>
 
+  <!-- Toasts -->
+  <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3">
+    <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2">
+      <div class="d-flex">
+        <div class="toast-body">✅ العملية نجحت</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
+    <div id="toastError" class="toast align-items-center text-bg-danger border-0 mb-2">
+      <div class="d-flex">
+        <div class="toast-body">❌ حدث خطأ</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
+  </div>
+
   <!-- مكتبات -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script>
+    const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
+    const toastError = new bootstrap.Toast(document.getElementById('toastError'));
+
+    function showSuccess(msg="✅ العملية نجحت") {
+      document.querySelector("#toastSuccess .toast-body").innerText = msg;
+      toastSuccess.show();
+    }
+    function showError(msg="❌ حدث خطأ") {
+      document.querySelector("#toastError .toast-body").innerText = msg;
+      toastError.show();
+    }
+
     let lastCompletionRate = null;
     let lastCollegeName = "جميع الكليات";
     let lastCommitteesCount = 0;
@@ -217,6 +245,7 @@
         });
       } catch (err) {
         console.error("خطأ في جلب الفلاتر:", err);
+        showError("❌ فشل تحميل الفلاتر");
       }
     }
 
@@ -305,6 +334,7 @@
 
       } catch (err) {
         console.error("خطأ في جلب التقييمات:", err);
+        showError("❌ فشل تحميل التقييمات");
       }
     }
 
@@ -332,6 +362,7 @@
     document.getElementById('collegeFilter').addEventListener('change', loadEvaluations);
     document.getElementById('auditorFilter').addEventListener('change', loadEvaluations);
 
+    // ✅ التحكم في إخفاء/إظهار الأعمدة
     document.getElementById('hideAuditorCheckbox').addEventListener('change', function () {
       document.getElementById('evaluationsTableWrapper').classList.toggle('hide-auditor', this.checked);
     });
